--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "async": "^2.1.4",
     "google-protobuf": "^3.1.1",
     "grpc": "^1.0.1",
+    "jsesc": "^2.2.0",
     "lodash": "^4.17.2",
     "minimist": "^1.2.0",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
+    "npm": "^4.0.2",
     "serve-favicon": "~2.3.0"
   }
 }
