--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsesc": "^2.2.0",
     "lodash": "^4.17.2",
     "minimist": "^1.2.0",
+    "moment": "^2.17.0",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
     "npm": "^4.0.2",
